# supply

./: .gitignore  README.md
addon-acc/electric/scheme/: addon-acc-cache.lib  addon-acc.bak  addon-acc.cmp  addon-acc.kicad_pcb  addon-acc.kicad_pcb-bak  addon-acc.net  addon-acc.pro  addon-acc.sch
addon-board-generic/electric/calc/: power_up_calc.dpl  power_up_calc.sch
addon-board-generic/electric/scheme/: addon-board-cache.lib  addon-board.bak  addon-board.cmp  addon-board.kicad_pcb  addon-board.kicad_pcb-bak  addon-board.net  addon-board.pro  addon-board.sch
addon-board-generic/electric/scheme/gerber/: addon-board-B_Cu.gbl  addon-board-B_Mask.gbs  addon-board-Edge_Cuts.gbr  addon-board-F_Cu.gtl  addon-board-F_Mask.gts  addon-board.drl
addon-board-generic/firmware/firmware/: .cproject  .project  Makefile  halconf.h  mcuconf.h
addon-board-generic/firmware/firmware/portld/: STM32F102C6T6.ld
addon-board-generic/firmware/firmware/src/: 165_ctrl.c  165_ctrl.h  595_ctrl.c  595_ctrl.h  adc_ctrl.c  adc_ctrl.h  hdw_cfg.h  i2c_ctrl.c  i2c_ctrl.h  main.c  pwm_ctrl.c  pwm_ctrl.h  pwr_ctrl.c  pwr_ctrl.h
addon-board-generic/firmware/pwm-icu/: Makefile  halconf.h  main.c  mcuconf.h
addon-gpio/electric/scheme/: addon-gpio-cache.lib  addon-gpio.bak  addon-gpio.cmp  addon-gpio.kicad_pcb  addon-gpio.kicad_pcb-bak  addon-gpio.net  addon-gpio.pro  addon-gpio.sch
docs/: bom.ods  interaction_desc.odt  movie_plan.odt  todo.odt
main-board-2/electric/libs/: to220.mod
main-board-2/electric/scheme/: $main-board-2.sch  main-board-2-cache.lib  main-board-2.bak  main-board-2.cmp  main-board-2.csv  main-board-2.kicad_pcb  main-board-2.kicad_pcb-bak  main-board-2.net  main-board-2.pro  main-board-2.sch
main-board-2/firmware/dfu/: description.txt  flash.sh
main-board-2/firmware/dfu/src/: main.c  (+1 more)
main-board-2/firmware/firmware/: readme.txt
main-board-2/firmware/pawn_header/: main2.inc
main-board/docs/: convertion_formulas.wxm
main-board/electric/scheme/: $supply-board.sch  supply-board-cache.lib  supply-board.bak  supply-board.cmp  supply-board.kicad_pcb  supply-board.kicad_pcb-bak  supply-board.net  supply-board.pro  supply-board.sch
main-board/electric/scheme-cur-lim/: curlim-cache.lib  curlim.bak  curlim.cmp  curlim.kicad_pcb  curlim.kicad_pcb-bak  curlim.net  curlim.pro  curlim.sch
main-board/firmware/dfu/: Makefile  description.txt  flash.sh
main-board/firmware/firmware/: Makefile  usb_ctrl.c
main-board/software/pawn/: CMakeLists.txt  config-win.cmake
main-board/software/pawn/3dparty/: CMakeLists.txt
main-board/software/pawn/3dparty/pawn/amx/: CMakeLists.txt
main-board/software/pawn/3dparty/pawn/compiler/: CMakeLists.txt
main-board/software/pawn/3dparty/stmdfu/: CMakeLists.txt
main-board/software/pawn/3dparty/stmdfu/src/: crc32.c  dfucommands.c  stmdfu.c
main-board/software/pawn/dfu/: CMakeLists.txt
main-board/software/pawn/dfu/src/: dfu.c  dfu_file.c  dfu_file.h  dfu_load.c  dfuse.c  usb_dfu.h
main-board/software/pawn/dfucmd/: CMakeLists.txt
main-board/software/pawn/dfucmd/src/: main.c
main-board/software/pawn/doc/: applications.html  general_desc.html  index.html  io_understanding.html  script_api.html
main-board/software/pawn/doc/css/: style.css
main-board/software/pawn/gui.py/: supply.py
main-board/software/pawn/i2cctrl/: CMakeLists.txt
main-board/software/pawn/i2cctrl/src/: mcuctrl.cpp  mcuctrl.h
main-board/software/pawn/installer/: installer.iss
main-board/software/pawn/mcuctrl/: CMakeLists.txt
main-board/software/pawn/mcuctrl/src/: mcu_ctrl.cpp  mcu_ctrl.h  usb_io.cpp
main-board/software/pawn/module.py/: CMakeLists.txt
main-board/software/pawn/module.py.i2c/: CMakeLists.txt
main-board/software/pawn/module.py.i2c/src/: supply.cpp  supply_py.cpp
main-board/software/pawn/module.py.usb/: CMakeLists.txt
main-board/software/pawn/module.py.usb/src/: supply_py.cpp
main-board/software/pawn/module.py/src/: supply.cpp  supply.h
main-board/software/pawn/pawn_include/: addon.inc  supply.inc
main-board/software/pawn/pawn_include/etching/: current_ctrl.p  current_ctrl.py  current_ctrl_gui.py
main-board/software/pawn/pawn_include/examples/: addon_buck_test.p  addon_test.p  boost_test.p  buck_test.p  compile.sh  eeprom.p  inp_adc_test.p  io_test.p  main.p  moto_test.p  pi_buck_test.p  robot.p  rpc_cam.p
main-board/software/pawn/pawn_include/examples_python/: eeprom.py  i2c_io_test.py  inp_adc_test.py  io_test.py  rpc_client.py  rpc_robot_client.py  rpc_robot_server.py  rpc_server.py  scratch.py  scratch_servo_ctrl.py
main-board/software/pawn/pawn_include/examples_python/cv2/: cam.yml  cam_calib01.py  chessboard_detection01.py  orb01.py  tut01.py
main-board/software/pawn/pawn_include/examples_python/scratch/: reading_output.py  scratch_tst.py  scratra.py
main-board/software/pawn/pawn_include/include/: addon.inc  supply.inc
main-board/software/pawn/pawn_include/scratch/: broadcasts.sb  servo_ctrl.sb
main-board/software/pawn/pawn_include/tests/: addon_test.p  compile.sh  main.p  pi_buck_test.p  servo_test.p  temp_test.p
main-board/software/pawn/tests/: CMakeLists.txt
main-board/software/pawn/tests/mcuctrl_test/: CMakeLists.txt
main-board/software/pawn/tests/mcuctrl_test/src/: main.cpp
main-board/software/pawn/tests/pawn_test/: CMakeLists.txt
main-board/software/pawn/tests/pawn_test/pawn_src/: compile.sh  default.inc  i2c_test.p  main.p
main-board/software/pawn/tests/supply_test/: CMakeLists.txt
main-board/software/pawn/tests/supply_test/src/: main.cpp
main-board/software/pawn/usbcmd/: CMakeLists.txt
main-board/software/pawn/usbcmd/src/: main.cpp
main-board/software/pawn/usbctrl/: CMakeLists.txt
main-board/software/pawn/usbctrl/src/: mcu_ctrl.cpp  mcu_ctrl.h  usb_io.cpp
main-board/software/pawn/usbctrl0/: CMakeLists.txt
main-board/software/pawn/usbctrl0/src/: usb_io.cpp
scite/: SciTE.properties  ide.bat  ide.sh  pawn.properties
scripts/: mount.sh
web/: content.php  index.php  settings.php
web/css/: style.css  stylesheet_apachefriends.css
web/page_borders/: html_footer.php  html_header.php
(+84 files in other folders)
